--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -51,11 +51,12 @@ jobs:
     
     steps:
     - name: Deploy to Linode server
-      uses: appleboy/ssh-action@v1.0.3
+      uses: appleboy/ssh-action@v0.1.10
       with:
         host: ${{ secrets.LINODE_HOST }}
         username: ${{ secrets.LINODE_USER }}
         password: ${{ secrets.LINODE_PASSWORD }}
+        port: 22
         script: |
           echo "🚀 Starting automatic deployment..."
           
