--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -27,7 +27,7 @@ jobs:
       id: meta
       uses: docker/metadata-action@v5
       with:
-        images: ${{ secrets.DOCKER_USERNAME }}/ytapi
+        images: vladsbeat/ytapi
         tags: |
           type=ref,event=branch
           type=ref,event=pr
@@ -65,11 +65,11 @@ jobs:
           docker rm ytapi-container 2>/dev/null || true
           
           # Remove old image to save space
-          docker rmi sbeaty/ytapi:latest 2>/dev/null || true
+          docker rmi vladsbeat/ytapi:latest 2>/dev/null || true
           
           # Pull latest image
           echo "📦 Pulling latest image..."
-          docker pull sbeaty/ytapi:latest
+          docker pull vladsbeat/ytapi:latest
           
           # Start new container
           echo "🔄 Starting new container..."
@@ -77,7 +77,7 @@ jobs:
             --name ytapi-container \
             --restart unless-stopped \
             -p 8001:8001 \
-            sbeaty/ytapi:latest
+            vladsbeat/ytapi:latest
           
           # Verify deployment
           echo "✅ Checking deployment..."
